@@ -38,7 +38,7 @@
 {% if state %}
 <p class="error" style="color:red;"><i>{{state}}</i></p>
 {% else %}
-<h3><i>All statements</i></h3>
+<h3><i>All statements from your organisation</i></h3>
 <p></p>
 <table id="{{tabletypeid}}">
   <thead>
